--- a/src/styles/blocks/lections.scss
+++ b/src/styles/blocks/lections.scss
@@ -33,13 +33,15 @@
     box-shadow: 0 2px 0 0 #1a5a4c40;
 
     @include onTablet {
-      margin: 0 100px 28px;
+      margin: 0 auto 28px;
       height: 204px;
+      width: 570px;
     }
 
     @include onDesktop {
-      margin: 0 355px 140px;
+      margin: 0 auto 140px;
       height: 204px;
+      width: 570px;
     }
   }
 
