--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -15,4 +15,10 @@
   line-height: 14px;
   text-align: left;
   color: #000;
+
+  transition: color 0.3s;
+
+  &:hover {
+    color: #f14a27;
+  }
 }
