--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -100,6 +100,12 @@
     border: none;
     cursor: pointer;
 
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: #af1d00;
+    }
+
     @include onTablet {
       width: 70px;
       height: 70px;
