--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "./utils/mixins";
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
+@import "./blocks/menu.scss";
 @import "./blocks/container.scss";
 @import "./blocks/current-events.scss";
 @import "./blocks/exhibitions.scss";
