fixes with header ,form and links

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -95,6 +95,26 @@
     }
   }
 
+  &__adress {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+
+    &:hover {
+      color: lightcoral;
+    }
+  }
+
+  &__mail {
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+
+    &:hover {
+      color: lightcoral;
+    }
+  }
+
   &__nav {
     margin-top: 40px;
     margin-bottom: 120px;
