--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -26,9 +26,15 @@
   }
 
   &__header {
-    padding-bottom: 10%;
-    margin-bottom: 5%;
-    overflow: hidden;
+    @include onTablet {
+      padding-bottom: 5%;
+      margin-bottom: 5%;
+    }
+
+    @include onDesktop {
+      margin-bottom: 100px;
+      overflow: hidden;
+    }
   }
 
   &__gallery {
