--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,10 @@
   box-sizing: border-box;
   position: relative;
 
+  @include onTablet {
+    overflow: hidden;
+  }
+
   &__background {
     z-index: -1;
 
@@ -30,7 +34,6 @@
     z-index: -1;
     top: 0;
     right: 0;
-    padding-left: 4%;
     width: 100%;
     height: 100%;
 
@@ -101,6 +104,11 @@
     @include onTablet {
       -webkit-text-fill-color: transparent;
       -webkit-text-stroke: 1px black ;
+    }
+
+    @include onDesktop {
+      -webkit-text-fill-color: black;
+      -webkit-text-stroke: none ;
     }
   }
 
