--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,30 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onDesktop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin onTablet {
+  @media
+    (max-width: 1023px) {
+    @content;
+  }
+}
+
+@mixin onTabletGrid {
+  @media
+    (min-width: 501px) {
+    @content;
+  }
+}
+
+@mixin onMobile {
+  @media
+    (max-width: 500px) {
+    @content;
+  }
+}
