--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -6,11 +6,19 @@
     transition: transform 0.3s;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(90%);
+    }
+
+    &--top {
+      margin-bottom: 30px;
     }
   }
 
   &__gap {
-    margin-bottom: 30px;
+    @include onTablet {
+      overflow-x: auto;
+      overflow-y: auto;
+      height: 500px;
+    }
   }
 }
