--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,9 +3,9 @@
   box-sizing: border-box;
   padding-top: 45px;
 
-  @include onMobile {
-    height: max-content;
-  }
+  // @include onMobile {
+  //   height: max-content;
+  // }
 
   &__content {
     background-image: url(../images/header.svg);
@@ -26,6 +26,13 @@
     @include onMobile {
       width: 100%;
       height: 300px;
+    }
+  }
+
+  &__title-block {
+    @include onMobile {
+      display: flex;
+      justify-content: center;
     }
   }
 
@@ -79,6 +86,7 @@
   &__tickets {
     display: flex;
     width: 270px;
+    height: 70px;
 
     @include onMobile {
       width: 100%;
@@ -106,6 +114,8 @@
     width: 70px;
     height: 70px;
     cursor: pointer;
+    border: none;
+
     transition: transform 0.3s;
 
     &:hover {
