--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -62,7 +62,7 @@
     transition: transform 0.3s;
 
     &:hover {
-      transform: scale(1.2);
+      transform: scale(0.9);
       color: #1a5a4c;
     }
   }
@@ -82,6 +82,10 @@
 
   &__wrapper {
     margin-top: 87px;
+    @include onMobile {
+      display: block;
+      text-align: center;
+    }
   }
 
   &__image {
@@ -106,6 +110,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      margin-bottom: 40px;
     }
   }
 
