--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -42,7 +42,10 @@
     @for $start from 1 through 12 {
       @for $end from $start through 12 {
         &-#{$start}-#{$end} {
-          grid-column: #{$start} / #{$end + 1};
+          @include onMobile {
+            grid-column: #{$start} / #{$end + 1};
+
+          }
         }
 
         &--desktop-#{$start}-#{$end} {
@@ -52,7 +55,7 @@
         }
 
         &--tablet-#{$start}-#{$end} {
-          @include onTablet {
+          @include onTabletGrid {
             grid-column: #{$start} / #{$end + 1};
           }
         }
