--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,3 @@
-$c-gray: #eee;
-$c-dark: #0f0e08;
-
-$logo-mob-height: 60px;
-$logo-desk-height: 72px;
+$colorGreen: #1a5a4c;
+$colorSemi-black: #0f0e08;
+$colorOrange-focus: #f14a27;
