--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,104 +1,141 @@
 .footer {
-  &__header {
+  &__container {
+    padding: 0 20px;
+
+    @include onTablet {
+      padding: 0 36px;
+    }
+
+    @include onDesktop {
+      padding: 0 56px;
+    }
+  }
+
+  &__buttons {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     margin: 0 20px 40px;
+
+    @include onTablet {
+      margin: 0;
+      flex-direction: column;
+      gap: 64px;
+      height: min-content;
+    }
   }
 
-  &__logo {
-    height: 72px;
-    width: 64px;
-  }
-
-  &__down-line {
-    box-sizing: border-box;
-    height: 1px;
-
-    border-bottom: 1px solid rgba($color: #1a5a4c, $alpha: 0.5);
-
-    margin: 0 20px 40px;
-  }
-
-  &__down-nav {
+  &__networks {
     display: flex;
-    justify-content: space-between;
+    gap: 24px;
+    color: black;
+  }
 
-    margin: 0 20px 80px;
+  &__link {
+    display: block;
+    height: 24px;
+    width: 24px;
 
-    font-family: "IBM Plex Sans", sans-serif;
-    font-weight: 4000;
-    font-size: 14px;
-    line-height: 14px;
-
-    &--1st-colmn {
-      width: 50%;
-      margin-right: 20px;
+    &-facebook {
+      background-image: url(../images/fb_icon.svg);
+      background-size: contain;
+      background-repeat: no-repeat;
     }
 
-    &--2nd-colmn {
-      width: 50%;
+    &-instagram {
+      background-image: url(../images/insta_icon.svg);
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.3);
     }
   }
 
-  &__instagram-link {
-    margin-left: 28px;
+  &__information {
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+  }
 
-    background-image: url(../images/dotInst.png);
-    background-repeat: no-repeat;
-    background-size: 45%;
+  &__button-top {
+    display: flex;
+    flex-direction: row-reverse;
+    margin: 0 20px 20px;
+
+    @include onDesktop {
+      order: 1;
+    }
+  }
+
+  &__button-link {
+    display: block;
+    height: 40px;
+    width: 40px;
+    border: 1px solid #000;
+    border-radius: 50%;
+
+    right: 0;
+
+    background-image: url(../images/scroll.png);
     background-position: center;
+    background-repeat: no-repeat;
   }
 
-  &__contacts-us {
-    display: flex;
-    justify-content: space-between;
+  &__line {
+    display: block;
+    margin: 0 0 40px;
+    height: 1px;
+    background-color: rgba(26, 90, 76, 0.5);
 
-    font-family: "IBM Plex Sans", sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-
-    color: #0f0e08;
-
-    margin: 0 20px;
-
-    &--work-time {
-      width: 50%;
-      margin-right: 20px;
-    }
-
-    &--contacts {
-      width: 50%;
+    @include onDesktop {
+      height: 260px;
+      width: 1px;
     }
   }
 
-  &__scroll {
-    display: flex;
-    justify-content: flex-end;
+  &__nav {
+    display: grid;
+    grid-template-columns: (2, 1fr);
+    gap: 20px;
+    margin-bottom: 0;
 
-    margin: 0 20px 20px 0;
+    @include onTablet {
+      margin-bottom: 0;
+    }
 
-    &-border {
+    @include onDesktop {
+      margin-bottom: 280px;
+    }
+  }
+
+  &__nav-link {
+    display: block;
+  }
+
+  &__design {
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 140.62%;
+    text-align: center;
+    margin: 120px 0 40px;
+
+    @include onTablet {
       display: flex;
-      justify-content: center;
-      align-items: center;
-
-      border: 1px solid #1a5a4c;
-      border-radius: 50%;
-
-      width: 50px;
-      height: 50px;
+      justify-content: space-between;
+      flex-direction: row-reverse;
     }
 
-    &-img {
-      width: 10px;
-      height: 12px;
+    @include onDesktop {
+      margin: 60px 0 40px;
+      order: 2;
     }
   }
-}
 
-.c-dark {
-  color: $c-dark;
+  &__designer {
+    margin-bottom: 10px;
+  }
 }
