--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -3,22 +3,21 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 20px;
 
-  /* @include onTablet {
+  @include onTablet {
     grid-template-columns: repeat(6, 1fr);
     column-gap: 30px;
-  } */
+  }
 
   @include onDesktop {
     grid-template-columns: repeat(12, 1fr);
-    column-gap: 30px;
   }
 
   &--desktop {
     display: block;
 
-    /* @include onTablet {
+    @include onTablet {
       display: grid;
-    } */
+    }
 
     @include onDesktop {
       display: grid;
@@ -26,11 +25,44 @@
   }
 
   &__item {
-    @for $start from 1 through 12 {
-      @for $end from $start through 13 {
-        &--#{$start}-#{$end} {
-          grid-column: #{$start} / #{$end};
+
+    @for $start from 1 through 2 {
+      @for $end from $start through 2 {
+        &--mobile-#{$start}-#{$end} {
+          grid-column: #{$start} / #{$end + 1};
         }
+      }
+    }
+
+    @include onTablet {
+      @for $start from 1 through 6 {
+        @for $end from $start through 6 {
+          &--tablet-#{$start}-#{$end} {
+            grid-column: #{$start} / #{$end + 1};
+          }
+        }
+      }
+    }
+
+    @include onDesktop {
+      @for $start from 1 through 12 {
+        @for $end from $start through 12 {
+          &--desktop-#{$start}-#{$end} {
+            grid-column: #{$start} / #{$end + 1};
+          }
+        }
+      }
+    }
+
+    &--first {
+      @include onDesktop {
+        order: 1;
+      }
+    }
+
+    &--second {
+      @include onDesktop {
+        order: 2;
       }
     }
   }
