--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,4 +1,5 @@
 .events {
+  margin-top: 70px;
   &__exhibition {
     align-items: center;
     display: flex;
@@ -35,15 +36,27 @@
     color: #0f0e08;
     position: relative;
 
+    @include onMobile {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 28px;
+      line-height: 100%;
+    }
+
     &::after {
       content: "";
       position: absolute;
       top: 50%;
-      margin-left: 30px;
+      margin-left: 5%;
       width: 15px;
       transform: translateY(-30%);
       height: 15px;
       background-color: #f14a27;
+
+      @include onMobile {
+        width: 10px;
+        height: 10px;
+      }
     }
 
     @include onMobile {
