--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -29,6 +29,9 @@
     transform: translateY(50%);
 
     @include onMobile {
+      text-align: center;
+      margin-left: 20px;
+      margin-right: 20px;
       padding: 20px 0;
     }
   }
@@ -45,6 +48,12 @@
     line-height: 100%;
     color: #0f0e08;
     margin-bottom: 0;
+    margin-top: 20px;
+
+    @include onMobile {
+      font-size: 28px;
+      line-height: 100%;
+    }
   }
 
   &__date {
