--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,7 +1,8 @@
 .icon {
   display: block;
-  width: 100%;
-  padding-bottom: 100%;
+  width: 18px;
+  height: 18px;
+  //padding-bottom: 100%;
 
   background-size: contain;
   background-position: center;
