--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -7,7 +7,8 @@
   justify-items: center;
   align-items: center;
 
-  padding: 0 24px;
+  // padding: 0 24px;
+  margin: 0 24px;
   z-index: 1;
 
   @include onTablet {
