--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -61,6 +61,11 @@
     }
   }
 
+  &__info {
+    font-size: 14px;
+    line-height: 21px;
+  }
+
   &__button-top {
     display: flex;
     flex-direction: row-reverse;
