--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,11 @@
-@mixin onTablet {
-  @media (min-width: 320px) {
-    @content;
-  }
-}
-
-@mixin onDesktop {
-  @media (min-width: 768px) {
-    @content;
-  }
-}
-
 * {
   margin: 0;
+  box-sizing: border-box;
+}
+
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
 }
 
 .page {
@@ -20,6 +14,21 @@
 }
 
 .header {
+  &__container {
+    height: 655px;
+    display: grid;
+    grid-template-columns: 1fr repeat(12, 70px) 1fr;
+    grid-template-rows: 206px auto 1fr;
+    column-gap: 30px;
+    grid-row-gap: 0px;
+  }
+
+  &__burger {
+    grid-area: 1 / 2;
+    margin-left: -17px;
+    margin-top: 45px;
+  }
+
   &__title {
     text-transform: uppercase;
     font-family: "Montserrat";
@@ -27,40 +36,522 @@
     font-weight: bold;
     font-size: 72px;
     line-height: 120%;
+    grid-area: 2 / 2 / 3 / 3;
+    margin-left: -20px;
+  }
+
+  &__tickets {
+    margin-top: -3em;
+    grid-column: 4 / 7;
+    grid-row: 3;
+    align-self: center;
+    width: 269px;
+    height: 70px;
+    border: 1px solid #1a5a4c;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &__title {
+      width: calc(100% - 68px);
+      text-transform: uppercase;
+      font-family: "IBM Plex Sans";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 100%;
+      text-align: center;
+    }
+
+    &__play {
+      display: flex;
+      height: 100%;
+      width: 68px;
+      background-color: #1a5a4c;
+    }
+  }
+
+  &__buy-tickets-img {
+    margin: auto;
+  }
+
+  &__events {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+    align-self: flex-end;
+    transform: rotate(-90deg);
+    transform-origin: bottom left;
+    font-family: IBM Plex Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 100%;
+    text-transform: uppercase;
+    color: #687480;
+
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 70px;
+      height: 1px;
+      background-color: #687480;
+      margin-right: 20px;
+      vertical-align: 20%;
+    }
   }
 
   &__image {
     background-image: url("../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png");
     background-repeat: no-repeat;
-    background-size: contain;
-    min-height: 700px;
-    left: 0;
+    background-size: cover;
+    background-position: top left;
+    grid-column: 7 / 15;
+    grid-row: 1 / 6;
+    overflow-x: visible;
+  }
 
+  &__logo {
+    margin-top: 15px;
+    z-index: 2;
+    grid-column: 7 / span 2;
+    grid-row: 1 / 1;
+    height: 72px;
+    width: 170px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Montserrat';
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 100%;
+    text-align: center;
+    color: #0F0E08;
   }
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 20px;
 
-  @include onTablet {
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 30px;
+.events {
+  margin: 200px auto 0;
+  width: 1170px;
+
+  &__title {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 100%;
+    color: #0F0E08;
+    margin-bottom: 56px;
   }
 
-  @include onDesktop {
-    grid-template-columns: repeat(12, 1fr);
-    column-gap: 30px;
-  }
+  &__event {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 104px;
 
-  &__item {
-    @for $start from 1 through 12 {
-      @for $end from $start through 12 {
-        &--#{$start}-#{$end} {
-          grid-column: #{$start} / #{$end + 1};
-        }
+    &-type {
+      text-transform: uppercase;
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 100%;
+      color: #687480;
+      margin-right: 25px;
+      left: 0;
+    }
+
+    &-date {
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 150%;
+      color: #1A5A4C;
+    }
+
+    &-title {
+      display: flex;
+      justify-content: flex-start;
+      width: 370px;
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: normal;
+      font-size: 36px;
+      line-height: 100%;
+      color: #0F0E08;
+      margin-top: 32px;
+
+      &::after {
+        content: '';
+        display: inline-block;
+        margin-top: 12px;
+        margin-left: 17px;
+        height: 15px;
+        width: 15px;
+        background-color: #F14A27;
       }
     }
+
+    &-description {
+      font-family: 'IBM Plex Sans';
+      font-style: normal;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 150%;
+      color: #4E4E4E;
+      margin-top: 15px;
+    }
+  }
+
+  &__picture {
+    display: block;
+    height: 520px;
+    min-width: 670px;
+  }
+
+  &__description {
+    display: flex;
+    width: 100%;
+    height: 520px;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 130px;
+    flex-direction: column;
+  }
+}
+
+.lecture {
+  display: flex;
+  flex-direction: column;
+
+  &__background img {
+    width: 100%;
+  }
+
+  &__details {
+    margin: -102px auto 200px;
+    height: 204px;
+    width: 570px;
+    background-color: white;
+    padding: 45px 100px 0;
+    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+  }
+
+  &__title {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 100%;
+    color: #0F0E08;
+    margin-top: 16px;
+  }
+
+  &__date {
+    float: right;
+    width: 170px;
+  }
+}
+
+.gallery {
+  margin: 0 auto 200px;
+  display: grid;
+  grid-template-columns: repeat(12, 70px);
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  justify-content: center;
+  grid-template-rows: calc(48px + 56px) 600px 360px;
+
+  &__photo_1 {
+    grid-column: 1 / span 4;
+  }
+
+  &__photo_3 {
+    grid-column: 1 / span 8;
+  }
+}
+
+.slider {
+  display: none;
+}
+
+.subscription {
+  background-image: url(../images/subscription_background.jpg);
+  background-size: 100% auto;
+  height: 550px;
+  display: grid;
+  justify-items: center;
+  align-content: start;
+
+  &__title {
+    color: #fff;
+    margin-top: 163px;
+    margin-bottom: 16px;
+  }
+
+  &__legend {
+    color: #fff;
+    grid-row: 2;
+
+    font-family: 'IBM Plex Sans';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 100%;
+  }
+
+  &__input {
+    width: calc(470px + 30px + 70px);
+    height: 70px;
+    margin-top: 72px;
+
+    display: flex;
+    justify-content: space-between;
+
+    &-field {
+      width: 470px;
+      background-color: white;
+      border:none;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+      padding-left: 32px;
+
+      &::placeholder {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 100%;
+        color: #687480;
+      }
+    }
+
+    &-button {
+      background-color: orangered;
+      width: 70px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+
+  &__confirmation-button {
+    height: 12px;
+    filter: invert(100%);
+  }
+}
+
+textarea:focus, input:focus {
+  outline: none;
+}
+
+.footer {
+  display: grid;
+  grid-template-rows: 134px min-content auto;
+  justify-content: center;
+  grid-template-columns: repeat(12, 70px);
+  grid-column-gap: 30px;
+  height: 457px;
+  background-color: transparent;
+  padding-top: 47px;
+  padding-bottom: 35px;
+
+  &__logo {
+    grid-column: 1 / 2;
+    height: 72px;
+    font-family: 'Montserrat';
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 100%;
+    color: #0F0E08;
+  }
+
+  &__social {
+    grid-column: 1 / 3;
+    grid-row: 2;
+  }
+
+  &__facebook {
+    margin-right: 17px;
+  }
+
+  &__insta {
+    margin-right: 17px;
+  }
+
+  &__copyright {
+    grid-row: 3;
+    grid-column: 1 / 13;
+    align-self: flex-end;
+    display: flex;
+    justify-content: space-between;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 12px;
+    color: #0F0E08;
+  }
+
+  &__working-schedule {
+    grid-column: 3 / 5;
+    grid-row: 1 / 3;
+    font-family: 'IBM Plex Sans';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 150%;
+    color: #0F0E08;
+  }
+
+  &__contacts {
+    grid-column: 5 / 7;
+    grid-row: 1 / 3;
+    font-family: 'IBM Plex Sans';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 150%;
+    color: #0F0E08;
+  }
+
+  &__separator {
+    grid-column: 7 / 8;
+    grid-row: 1 / 3;
+    height: 260px;
+    width: 1px;
+    background-color: rgba(26, 90, 76, 0.5);
+    margin-left: 35px;
+  }
+
+  &__links {
+    font-family: 'IBM Plex Sans';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 100%;
+    color: #0F0E08;
+
+    &-col-1 {
+      grid-column: 8 / 10;
+    }
+
+    &-col-2 {
+      grid-column: 10 / 12;
+    }
+  }
+}
+
+@media (max-width: 1245px) {
+  .header, .events, .lecture, .gallery, .footer {
+    display: none;
+  }
+
+  .slider {
+    display: block;
+    justify-content: center;
+    height: 500px;
+    width: 100%;
+    background-color: goldenrod;
+
+    &__container {
+      height: 400px;
+      width: 600px;
+      background-color: blue;
+      margin: 0 auto;
+
+      overflow: hidden;
+    }
+
+    &__buttons {
+      display: flex;
+      justify-content: center;
+    }
+
+    &__button {
+      width: 9px;
+      height: 9px;
+      background-color: black;
+      border-radius: 50%;
+      margin: 11px;
+      display: inline-block;
+    }
+  }
+
+  @keyframes slider {
+    0% {
+      left: 0;
+    }
+    20% {
+      left: 0;
+    }
+    25% {
+      left: -100%;
+    }
+    45% {
+      left: -100%;
+    }
+    50% {
+      left: -200%;
+    }
+    70% {
+      left: -200%;
+    }
+    75% {
+      left: -300%;
+    }
+    95% {
+      left: -300%;
+    }
+    100% {
+      left: -400%;
+    }
+
+  }
+
+  .slider figure {
+    position: relative;
+    width: 500%;
+    margin: 0;
+    left: 0;
+    // animation: 20s slider infinite;
+  }
+
+  .slider figure img {
+    float: left;
+    width: 20%;
+  }
+
+  #img1:target {
+    .slider figure {
+      left: 0;
+    }
+  }
+
+  #img2:target {
+    .slider figure {
+      left: -100%;
+    }
+  }
+
+  #img3:target {
+    .slider figure {
+      left: -200%;
+    }
+  }
+
+  #img4:target {
+    .slider figure {
+      left: -300%;
+    }
+  }
+
+  .page {
+    width: 100%;
+    height: 100vh;
+    background-color: red;
   }
 }
