--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -35,7 +35,7 @@
     align-items: center;
     gap: 24px;
 
-    @include onTablet {
+    @include onTabletFooter {
       gap: 38px;
     }
   }
@@ -59,7 +59,7 @@
 
     border-bottom: 1px solid rgba(26, 90, 76, 0.5);
 
-    @include onTablet {
+    @include onTabletFooter {
       position: static;
       margin-bottom: 64px;
     }
@@ -87,7 +87,7 @@
     line-height: 21px;
     text-align: left;
 
-    @include onTablet {
+    @include onTabletFooter {
       width: 220px;
     }
 
@@ -107,7 +107,7 @@
     line-height: 21px;
     text-align: left;
 
-    @include onTablet {
+    @include onTabletFooter {
       display: inline;
     }
 
@@ -125,7 +125,7 @@
     line-height: 21px;
     text-align: left;
 
-    @include onTablet {
+    @include onTabletFooter {
       width: 220px;
     }
 
@@ -165,9 +165,9 @@
 
     transition: transform 0.3s;
 
-    @include onTablet {
+    @include onTabletFooter {
       right: 50px;
-      bottom: 135px;
+      bottom: 180px;
     }
 
     @include onDesktop {
@@ -186,7 +186,7 @@
   &__nav {
     margin-bottom: 80px;
 
-    @include onTablet {
+    @include onTabletFooter {
       margin-bottom: 120px;
     }
   }
