--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -11,6 +11,12 @@
   }
 }
 
+@mixin onTabletFooter {
+  @media (min-width: 500px) and (max-width: 1279px) {
+    @content;
+  }
+}
+
 @mixin onDesktop {
   @media (min-width: 1280px) {
     @content;
