--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -42,6 +42,13 @@
     color: #687480;
     padding-left: 32px;
     box-sizing: border-box;
+
+
+    @include onMobile {
+      height: 50px;
+      width: 230px;
+      padding-left: 24px;
+    }
   }
 
   &__button {
@@ -54,9 +61,15 @@
     cursor: pointer;
     border: none;
     transition: transform 0.3s;
+    // padding: 0;
 
     &:hover {
       transform: scale(0.9);
+    }
+
+    @include onMobile {
+      height: 50px;
+      width: 50px;
     }
   }
 
