--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,12 +21,26 @@ a, a:hover, a:focus, a:active {
     grid-template-rows: 206px auto 1fr;
     column-gap: 30px;
     grid-row-gap: 0px;
+
+    @media (max-width: 1245px) {
+      height: 384px;
+      grid-template-columns: repeat(6, 90px);
+      grid-template-rows: 127px repeat(2, auto);
+      column-gap: 30px;
+      margin-left: calc((100vw - 690px)/2);
+      overflow-x: hidden;
+    }
   }
 
   &__burger {
     grid-area: 1 / 2;
     margin-left: -17px;
     margin-top: 45px;
+
+    @media (max-width: 1245px) {
+      grid-area: 1 / 1;
+      margin-left: 0px;
+    }
   }
 
   &__title {
@@ -38,6 +52,13 @@ a, a:hover, a:focus, a:active {
     line-height: 120%;
     grid-area: 2 / 2 / 3 / 3;
     margin-left: -20px;
+
+    @media (max-width: 1245px) {
+      grid-area: 2 / 1 / 3 / 4;
+      font-size: 54px;
+      line-height: 65px;
+      margin-left: 0;
+    }
   }
 
   &__tickets {
@@ -52,6 +73,11 @@ a, a:hover, a:focus, a:active {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: 1245px) {
+      grid-area: 3 / 1;
+      margin-top: 38px;
+    }
 
     &__title {
       width: calc(100% - 68px);
@@ -82,13 +108,17 @@ a, a:hover, a:focus, a:active {
     align-self: flex-end;
     transform: rotate(-90deg);
     transform-origin: bottom left;
-    font-family: IBM Plex Sans;
+    font-family: 'IBM Plex Sans';
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
     line-height: 100%;
     text-transform: uppercase;
     color: #687480;
+
+    @media (max-width: 1245px) {
+      display: none;
+    }
 
     &::before {
       content: "";
@@ -109,6 +139,11 @@ a, a:hover, a:focus, a:active {
     grid-column: 7 / 15;
     grid-row: 1 / 6;
     overflow-x: visible;
+
+    @media (max-width: 1245px) {
+      grid-area: 1 / 4 / 4 / span 4;
+      
+    }
   }
 
   &__logo {
@@ -128,6 +163,11 @@ a, a:hover, a:focus, a:active {
     line-height: 100%;
     text-align: center;
     color: #0F0E08;
+
+    @media (max-width: 1245px) {
+      grid-area: 1 / 4 / 1 / 6;
+      width: 220px;
+    }
   }
 }
 
@@ -135,6 +175,11 @@ a, a:hover, a:focus, a:active {
 .events {
   margin: 200px auto 0;
   width: 1170px;
+
+  @media (max-width: 1245px) {
+    margin-top: 88px;
+    width: 690px;
+  }
 
   &__title {
     font-family: 'Montserrat', sans-serif;
@@ -149,6 +194,15 @@ a, a:hover, a:focus, a:active {
     display: flex;
     flex-direction: row;
     margin-bottom: 104px;
+
+    @media (max-width: 1245px) {
+      flex-direction: column;
+      margin-bottom: 64px;
+
+      &:last-child {
+        margin-bottom: 112px;
+      }
+    }
 
     &-type {
       text-transform: uppercase;
@@ -202,6 +256,10 @@ a, a:hover, a:focus, a:active {
       line-height: 150%;
       color: #4E4E4E;
       margin-top: 15px;
+
+      @media (max-width: 1245px) {
+        width: calc(90px * 4 + 30px * 3);
+      }
     }
   }
 
@@ -209,6 +267,11 @@ a, a:hover, a:focus, a:active {
     display: block;
     height: 520px;
     min-width: 670px;
+
+    @media (max-width: 1245px) {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__description {
@@ -219,6 +282,12 @@ a, a:hover, a:focus, a:active {
     align-items: flex-start;
     padding-left: 130px;
     flex-direction: column;
+
+    @media (max-width: 1245px) {
+      height: auto;
+      margin-top: 44px;
+      padding-left: 0;
+    }
   }
 }
 
@@ -228,6 +297,14 @@ a, a:hover, a:focus, a:active {
 
   &__background img {
     width: 100%;
+
+    @media (max-width: 1245px) {
+      width: 690px;
+      height: max-content;
+      display: block;
+      margin: 0 auto;
+      content: url(../images/lecture_tablet.jpg);
+    }
   }
 
   &__details {
@@ -237,6 +314,10 @@ a, a:hover, a:focus, a:active {
     background-color: white;
     padding: 45px 100px 0;
     box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+
+    @media (max-width: 1245px) {
+      margin-bottom: 88px;
+    }
   }
 
   &__title {
@@ -285,10 +366,19 @@ a, a:hover, a:focus, a:active {
   justify-items: center;
   align-content: start;
 
+  @media (max-width: 1245px) {
+    background-image: url(../images/subscription_iPad.jpg);
+    height: 380px;
+  }
+
   &__title {
     color: #fff;
     margin-top: 163px;
     margin-bottom: 16px;
+
+    @media (max-width: 1245px) {
+      margin-top: 82px;
+    }
   }
 
   &__legend {
@@ -306,9 +396,12 @@ a, a:hover, a:focus, a:active {
     width: calc(470px + 30px + 70px);
     height: 70px;
     margin-top: 72px;
-
     display: flex;
     justify-content: space-between;
+
+    @media (max-width: 1245px) {
+      margin-top: 64px;
+    }
 
     &-field {
       width: 470px;
@@ -363,6 +456,13 @@ textarea:focus, input:focus {
   padding-top: 47px;
   padding-bottom: 35px;
 
+  @media (max-width: 1245px) {
+    grid-template-columns: repeat(6, 90px);
+    grid-template-rows: 134px min-content auto auto auto;
+    padding-top: 51px;
+    height: auto;
+  }
+
   &__logo {
     grid-column: 1 / 2;
     height: 72px;
@@ -397,6 +497,12 @@ textarea:focus, input:focus {
     font-weight: 300;
     font-size: 12px;
     color: #0F0E08;
+
+    @media (max-width: 1245px) {
+      grid-column: 1 / 7;
+      grid-row: 5;
+      margin: 110px 0 36px;
+    }
   }
 
   &__working-schedule {
@@ -407,6 +513,10 @@ textarea:focus, input:focus {
     font-size: 14px;
     line-height: 150%;
     color: #0F0E08;
+
+    @media (max-width: 1245px) {
+      grid-area: 1 / 2 / 3 / 4;
+    }
   }
 
   &__contacts {
@@ -417,6 +527,10 @@ textarea:focus, input:focus {
     font-size: 14px;
     line-height: 150%;
     color: #0F0E08;
+
+    @media (max-width: 1245px) {
+      grid-area: 1 / 4 / 3 / 6;
+    }
   }
 
   &__separator {
@@ -426,6 +540,13 @@ textarea:focus, input:focus {
     width: 1px;
     background-color: rgba(26, 90, 76, 0.5);
     margin-left: 35px;
+
+    @media (max-width: 1245px) {
+      grid-area: 3 / 2 / 4 / 6;
+      height: 1px;
+      width: calc((4*90px + 3*30px));
+      margin: 64px 0;
+    }
   }
 
   &__links {
@@ -442,74 +563,68 @@ textarea:focus, input:focus {
     &-col-2 {
       grid-column: 10 / 12;
     }
+
+    @media (max-width: 1245px) {
+      &-col-1 {
+        grid-column: 2 / 4;
+      }
+  
+      &-col-2 {
+        grid-column: 4 / 6;
+      }
+    }
   }
 }
 
 @media (max-width: 1245px) {
-  .header, .events, .lecture, .gallery, .footer {
+  .gallery {
     display: none;
+  }
+
+  .event__photo {
+    width: 100%;
+    height: auto;
   }
 
   .slider {
     display: block;
     justify-content: center;
-    height: 500px;
     width: 100%;
-    background-color: goldenrod;
+
+    &__title {
+      width: 690px;
+      margin: 0 auto 48px;
+    }
 
     &__container {
-      height: 400px;
-      width: 600px;
-      background-color: blue;
+      height: 543px;
+      width: 700px;
       margin: 0 auto;
-
       overflow: hidden;
     }
 
     &__buttons {
       display: flex;
       justify-content: center;
+      margin: 21px auto 81px;
     }
 
     &__button {
       width: 9px;
       height: 9px;
-      background-color: black;
+      background-color: #E0E0E0;
       border-radius: 50%;
       margin: 11px;
       display: inline-block;
+
+      &:active {
+        background-color: #1A5A4C;
+      }
     }
   }
 
-  @keyframes slider {
-    0% {
-      left: 0;
-    }
-    20% {
-      left: 0;
-    }
-    25% {
-      left: -100%;
-    }
-    45% {
-      left: -100%;
-    }
-    50% {
-      left: -200%;
-    }
-    70% {
-      left: -200%;
-    }
-    75% {
-      left: -300%;
-    }
-    95% {
-      left: -300%;
-    }
-    100% {
-      left: -400%;
-    }
-
+  .btn1 {
+    background-color: #1A5A4C;
   }
 
   .slider figure {
@@ -522,36 +637,8 @@ textarea:focus, input:focus {
 
   .slider figure img {
     float: left;
-    width: 20%;
-  }
-
-  #img1:target {
-    .slider figure {
-      left: 0;
-    }
-  }
-
-  #img2:target {
-    .slider figure {
-      left: -100%;
-    }
-  }
-
-  #img3:target {
-    .slider figure {
-      left: -200%;
-    }
-  }
-
-  #img4:target {
-    .slider figure {
-      left: -300%;
-    }
-  }
-
-  .page {
-    width: 100%;
-    height: 100vh;
-    background-color: red;
+    width: calc(10% - 10px);
+    height: 543px;
+    margin-right: 20px;
   }
 }
