--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -43,7 +43,6 @@
     padding-left: 32px;
     box-sizing: border-box;
 
-
     @include onMobile {
       height: 50px;
       width: 230px;
@@ -56,7 +55,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: #f14a27;
-    width: 70px;
+    min-width: 70px;
     height: 70px;
     cursor: pointer;
     border: none;
@@ -69,7 +68,8 @@
 
     @include onMobile {
       height: 50px;
-      width: 50px;
+      min-width: 50px;
+      max-width: 50px;
     }
   }
 
