Landing was fixed

--- a/src/styles/blocks/buy.scss
+++ b/src/styles/blocks/buy.scss
@@ -20,7 +20,7 @@
 
     font-weight: 500;
     color: $titles-color;
-    line-height: 1em;
+    line-height: $button-size-mobile;
     text-transform: uppercase;
 
     height: $button-size-mobile;
@@ -31,12 +31,33 @@
       height: $button-size;
       width: 200px;
       flex-grow: 0;
+
+      line-height: $button-size;
     }
 
     @include onDesctop {
       height: $button-size;
       width: 200px;
       flex-grow: 0;
+
+      line-height: $button-size;
+    }
+  }
+
+  &__link {
+    text-decoration: none;
+    padding: 0 ((100vw - $base-spaces-mobile * 2 - 40vw) / 2);
+
+    @include onTablet {
+      padding: 0 68px;
+    }
+
+    @include onDesctop {
+      padding: 0 68px;
+    }
+
+    &:visited {
+      color: $green-elements-color;
     }
   }
 
