--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -49,6 +49,8 @@
     min-width: 87.5vw;
     height: 65.6vw;
 
+    transition: 0.5s;
+
     @include onTablet {
       margin-bottom: 44px;
       grid-column: $grid-first-position / span 6;
@@ -67,7 +69,7 @@
     }
 
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.05);
     }
   }
 
