--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -41,6 +41,8 @@
     margin-right: 16px;
     margin-bottom: $base-spaces-mobile;
 
+    transition: 0.5s;
+
     @include onTablet {
       max-width: 567px;
       min-width: 44vw;
@@ -100,7 +102,7 @@
     }
 
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.05);
     }
   }
 
