--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,12 +1,13 @@
 .menu {
   background-color: $green-elements-color;
-  height: 100vh;
-  z-index: 1;
+  height: 100%;
+  z-index: 99;
 
   &__abbr {
     padding: 8px 0;
 
     @include onTablet {
+      font-size: 5vw;
       padding: 16px 0;
     }
 
@@ -25,14 +26,13 @@
     margin: 0 auto;
     padding: 0;
     list-style: none;
+    font-size: 4vh;
 
     @include onTablet {
-      font-size: 3vw;
-      max-width: 40vw;
+      max-width: 60vw;
     }
 
     @include onDesctop {
-      font-size: 2vw;
       max-width: 30vw;
     }
   }
@@ -41,7 +41,7 @@
     display: block;
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
-    line-height: 1em;
+    line-height: 2em;
     text-transform: uppercase;
     color: $titles-color;
     text-align: center;
