The color of the unvisited link was fixed

--- a/src/styles/blocks/buy.scss
+++ b/src/styles/blocks/buy.scss
@@ -46,6 +46,7 @@
 
   &__link {
     text-decoration: none;
+    color: $green-elements-color;
     padding: 0 ((100vw - $base-spaces-mobile * 2 - 40vw) / 2);
 
     @include onTablet {
