--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,3 +2,6 @@
 @import "./utils/mixins";
 @import "./utils/normalize.scss";
 @import "./blocks/page.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
