Header somehow works on different devices

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,4 +2,17 @@
   &__body {
     margin: 0;
   }
+
+  &__header {
+    max-width: 320px;
+    margin: 0 auto;
+
+    @include onTablet {
+      max-width: 768px;
+    }
+
+    @include onDesktop {
+      max-width: 1280px;
+    }
+  }
 }
