--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,50 +1,110 @@
 .header {
+  @include grid;
+
   &__photo {
-    width: 100%;
     z-index: -1;
-    position: absolute;
-    left: 0;
-    top: 0;
+    position: relative;
+    width: 320px;
     height: 300px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
     background-image: url(../images/museum.png);
 
-    // @include onTablet {
-    //   left: calc(50% + 10px);
-    //   right: 0;
-    //   height: 384px;
-    // }
+    @include onTablet {
+      position: absolute;
+      width: 50vw;
+      height: 384px;
+      background-size: contain;
+      top: 0;
+      right: 0;
+    }
 
-    // @include onDesktop {
-    //   // left: calc(40%);
-    //   height: 100vh;
-    //   background-size: contain;
-    //   // background-position: inherit;
-    // }
-  }
-
-  &__title {
-    padding: 200px 0;
-    grid-column: 1 / 3;
-    justify-self: center;
-    width: 280px;
-    font-size: 45px;
-    text-align: center;
-  }
-
-  &__logo {
-    grid-column: 1 / 3;
-    justify-self: center;
-    width: 55px;
-    height: 55px;
-    padding: 9px 0;
+    @include onDesktop {
+      height: 655px;
+    }
   }
 
   &__menu {
-    grid-column: 1 / 2;
+    position: absolute;
+    top: 33px;
+    left: 23px;
+
+    @include onTablet {
+      left: 10%;
+    }
+
+    @include onDesktop {
+      position: static;
+      grid-column: 2 / 4;
+      align-self: center;
+    }
+
     width: 18px;
     height: 12px;
+
+    background-image: url(../images/menu.svg);
+    background-size: contain;
+
+    transition: transform $animationTime;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  &__logo {
+    position: absolute;
+    top: 9px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 55px;
+    height: 61px;
+
+    background-image: url(../images/favicon.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    @include onTablet {
+      position: static;
+      @include square(72px);
+      grid-column: 5 / 7;
+      margin-top: 15px;
+    }
+
+    @include onDesktop {
+      grid-column: 8 / 10;
+    }
+  }
+
+  &__title {
+    margin: 0 auto 20px;
+    padding-top: 20px;
+    width: 280px;
+    font-size: 45px;
+    text-align: center;
+
+    @include onTablet {
+      grid-column: 1 / 4;
+      font-size: 54px;
+      text-align: start;
+    }
+
+    @include onDesktop {
+      grid-column: 1 / 6;
+      font-size: 72px;
+    }
+  }
+
+  &__button {
+    margin: 0 auto;
+
+    @include onTablet {
+      grid-column: 1 / 4;
+    }
+
+    @include onDesktop {
+      grid-column: 4 / 6;
+    }
   }
 }
