--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
-@import "./utils/vars";
 @import "./utils/mixins";
+@import "./utils/vars";
 @import "./utils/normalize.scss";
 @import "./blocks/page.scss";
-@import "./blocks/grid.scss";
-@import "./blocks/container.scss";
 @import "./blocks/header.scss";
+@import "./blocks/button.scss";
