--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,3 +1,13 @@
 $colorWhite: #fff;
-$colorBlack: #000;
+$colorBlack: #0f0e08;
+$colorRed: #f14a27;
 $buttonBackground: #1a5a4c;
+$animationTime: 0.3s;
+
+$buttonWidth: 280px;
+$buttonHeight: 50px;
+
+// @include onDesktop {
+//   $buttonWidth: 269px;
+//   $buttonHeight: 70px;
+// }
