Block events works great on different devices

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,7 +11,7 @@
     height: $buttonHeight;
 
     border: 1px solid $buttonBackground;
-    background-color: $colorWhite;
+    background-color: $backgroundColor;
     transition: background-color $animationTime, color $animationTime;
 
     &::before {
