--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,5 @@
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
 @import "./blocks/button.scss";
+@import "./blocks/events.scss";
+@import "./blocks/exhibition.scss";
