--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -18,6 +18,12 @@
   }
 
   @include onDesktop {
+    grid-template-columns: repeat(12, 1fr);
+  }
+}
+
+@mixin gridDesktop {
+  @include onDesktop {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 30px;
