--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,8 @@
+$backgroundColor: #f7f7f7;
 $colorWhite: #fff;
 $colorBlack: #0f0e08;
+$colorGray: #687480;
+$colorGreenDark:#4f4f4f;
 $colorRed: #f14a27;
 $buttonBackground: #1a5a4c;
 $animationTime: 0.3s;
