--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,26 +1,23 @@
 .header {
   @include grid;
+  height: 100vh;
 
   &__photo {
     z-index: -1;
     position: relative;
-    width: 320px;
+    width: 100%;
     height: 300px;
     background-size: cover;
+    // background-position: center;
     background-repeat: no-repeat;
     background-image: url(../images/museum.png);
 
     @include onTablet {
       position: absolute;
       width: 50vw;
-      height: 384px;
-      background-size: contain;
+      height: 100vh;
       top: 0;
       right: 0;
-    }
-
-    @include onDesktop {
-      height: 655px;
     }
   }
 
@@ -82,7 +79,9 @@
     padding-top: 20px;
     width: 280px;
     font-size: 45px;
+    text-transform: uppercase;
     text-align: center;
+    color: #000;
 
     @include onTablet {
       grid-column: 1 / 4;
