--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,18 +1,19 @@
 .page {
   &__body {
     margin: 0;
+    background-color: $backgroundColor;
   }
 
   &__header {
-    max-width: 320px;
+    // max-width: 320px;
     margin: 0 auto;
 
     @include onTablet {
-      max-width: 768px;
+      // max-width: 768px;
     }
 
     @include onDesktop {
-      max-width: 1280px;
+      // max-width: 1280px;
     }
   }
 }
