--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -6,13 +6,20 @@ body {
   margin: 0;
 }
 
-h1 {
+h1,
+h2,
+h3 {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  text-transform: uppercase;
+  font-weight: 700;
   color: $colorBlack;
 }
 
+p {
+  margin: 0;
+}
+
+a,
 a:visited {
   color: $colorBlack;
 }
