Menu not ready and wrong buttons

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,4 +1,4 @@
-$backgroundColor: #f7f7f7;
+$backgroundColor: #fff;
 $colorWhite: #fff;
 $colorBlack: #0f0e08;
 $colorGray: #687480;
@@ -9,6 +9,8 @@ $animationTime: 0.3s;
 
 $buttonWidth: 280px;
 $buttonHeight: 50px;
+
+$gridColumns: (1: "1 / 5", 2: "5 / 13", 3: "1 / 9", 4: "9 / 13");
 
 // @include onDesktop {
 //   $buttonWidth: 269px;
