--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -1,5 +1,6 @@
 html {
   font-family: "IBM Plex Sans", sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -15,6 +16,27 @@ h3 {
   color: $colorBlack;
 }
 
+h2 {
+  font-size: 36px;
+
+  @include onDesktop {
+    font-size: 48px;
+  }
+}
+
+h3 {
+  font-size: 28px;
+  font-weight: 400;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+}
+
+h4 {
+  margin: 0;
+}
+
 p {
   margin: 0;
 }
@@ -22,4 +44,13 @@ p {
 a,
 a:visited {
   color: $colorBlack;
+  text-decoration: none;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style-type: none;
 }
