--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,7 @@
 @import "./blocks/button.scss";
 @import "./blocks/events.scss";
 @import "./blocks/exhibition.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
