--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,5 @@
 @import "./blocks/gallery.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/container.scss";
