--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,50 @@
+@import "reset";
 @import "utils";
+// @import "utils.scss";
 @import "fonts";
 @import "typography";
 
+@import "./blocks/header.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/container.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/btn.scss";
+@import "./blocks/events.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/schedule.scss";
+@import "./blocks/contact.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/icon.scss";
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: $c-gray;
+  overflow-x: hidden;
+}
+
+// .page__body--with-menu {
+//   overflow: hidden;
+// }
+
+.page__section {
+  margin-bottom: 70px;
+}
+
+.page__menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+
+  transform: translateY(-100%);
+  transition: transform 0.5s;
+
+  &:target {
+    transform: translateX(0);
+  }
 }
