--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,3 +4,5 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap");
