--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,17 @@
 h1 {
-  @extend %h1;
+  font-weight: 700;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
+}
+
+div,
+p,
+a {
+  font-family: "IBM Plex Sans", Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
