--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -60,6 +60,12 @@
     background-image: url(../images/facebook.svg);
     background-size: contain;
     background-repeat: no-repeat;
+
+    transition: transform $animationTime;
+
+    &:hover {
+      transform: scale(1.5);
+    }
   }
 
   &__instagram {
@@ -68,6 +74,12 @@
     background-image: url(../images/inst.svg);
     background-size: contain;
     background-repeat: no-repeat;
+
+    transition: transform $animationTime;
+
+    &:hover {
+      transform: scale(1.5);
+    }
   }
 
   &__schedule {
@@ -163,8 +175,16 @@
     }
   }
 
-  &__link {
+  &__list {
     margin-bottom: 20px;
+  }
+
+  &__link {
+    transition: color $animationTime;
+
+    &:hover {
+      color: $colorHover;
+    }
   }
 
   &__copyright {
