--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,6 +5,8 @@ $colorGray: #687480;
 $colorGreenDark:#4f4f4f;
 $colorRed: #f14a27;
 $buttonBackground: #1a5a4c;
+$colorHover: blue;
+
 $animationTime: 0.3s;
 
 $buttonWidth: 280px;
@@ -13,6 +15,6 @@ $buttonHeight: 50px;
 $gridColumns: (1: "1 / 5", 2: "5 / 13", 3: "1 / 9", 4: "9 / 13");
 
 // @include onDesktop {
-//   $buttonWidth: 269px;
+//   $buttonWidth: 250px;
 //   $buttonHeight: 70px;
 // }
