--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,6 +2,10 @@
   &__body {
     margin: 0;
     background-color: $backgroundColor;
+
+    &--with-menu {
+      overflow: hidden;
+    }
   }
 
   &__header {
