--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,16 @@
-h1 {
+h1,
+h2 {
+  margin: 0;
+  padding: 0;
   @extend %h1;
+  font-weight: 700;
+  color: $titleDarkColor;
+}
+
+h3 {
+  margin: 0;
+  padding: 0;
+  @extend %h1;
+  font-weight: 400;
+  color: $titleDarkColor;
 }
