--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$activeColor: #f14a27;
+$titleDarkColor: #0f0e08;
+$secondActiveColor: #1a5a4c;
+$paddingForMobile: 20px;
+$paddingForTablet: 39px;
