--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,27 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page";
+@import "blocks/main";
+@import "blocks/title-second";
+@import "blocks/container";
+@import "blocks/menu-icon";
+@import "blocks/header";
+@import "blocks/logo";
+@import "blocks/button";
+@import "blocks/grid";
+@import "blocks/events";
+@import "blocks/event";
+@import "blocks/event-original";
+@import "blocks/event-info";
+@import "blocks/gallery";
+@import "blocks/slider";
+@import "blocks/buttons";
+@import "blocks/subscribe";
+@import "blocks/footer";
+@import "blocks/icon";
+@import "blocks/schedule";
+@import "blocks/contacts";
+@import "blocks/menu";
+@import "blocks/open-menu";
+@import "blocks/open-menu-icon";
