--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,33 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin onDesktopD {
+  @media (min-width: 1600px) {
+    @content;
+  }
+}
+
+@mixin onFullHD {
+  @media (min-width: 1920px) {
+    @content;
+  }
+}
+
+@mixin onLarge {
+  @media (min-width: 2560px) {
+    @content;
+  }
+}
