--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,5 @@
 @import "reset";
 @import "utils";
-// @import "utils.scss";
 @import "fonts";
 @import "typography";
 
@@ -12,6 +11,7 @@
 @import "./blocks/events.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/subscription.scss";
+@import "./blocks/form.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/schedule.scss";
 @import "./blocks/contact.scss";
@@ -27,9 +27,9 @@ body {
   overflow-x: hidden;
 }
 
-// .page__body--with-menu {
-//   overflow: hidden;
-// }
+.page__body--with-menu {
+  overflow: hidden;
+}
 
 .page__section {
   margin-bottom: 70px;
