--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,91 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablet {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin onLaptop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin title4_500_100 {
+  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+  color: $c-lightgrey;
+}
+
+@mixin title4_700_150_green {
+  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  color: $c-green;
+}
+
+@mixin title3_400_100 {
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 100%;
+  color: $c-darkgrey;
+}
+
+@mixin title2_700_100 {
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 100%;
+  color: $c-darkgrey;
+}
+
+@mixin title1_700 {
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  color: $c-black;
+}
+
+@mixin text_14_150_400 {
+  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: $c-darkgrey;
+}
+
+@mixin text_14_150_600 {
+  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 150%;
+  color: $c-darkgrey;
+}
+
+@mixin text_16_150 {
+  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 150%;
+  color: $c-grey;
+}
+
+@mixin text_16_100 {
+  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: $c-darkgrey;
+}
