--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$c-white: #fff;
+$c-black: #000;
+$c-darkgrey: #0f0e08;
+$c-grey: #4e4e4e;
+$c-lightgrey: #687480;
+$c-green: #1a5a4c;
